# sysaidmin

./: .dockerignore  .gitignore  CLAUDE_CODE_FEATURES.md  Cargo.toml  Dockerfile.amd64  Dockerfile.arm64  Dockerfile.armhf  Dockerfile.darwin-arm64  Dockerfile.debian12  Dockerfile.riscv64  Justfile  LICENSE.md  Makefile  README.md  build-darwin.sh  build-deb-docker.sh  build.sh  claude-code  sysaidmin.history.sh
sysaidmin/: Cargo.toml
sysaidmin/src/: allowlist.rs  api.rs  app.rs  config.rs  conversation.rs  executor.rs  history.rs  hooks.rs  logger.rs  main.rs  models.rs  parser.rs  session.rs  task.rs  tokenizer.rs  transcript.rs  tui.rs
sysaidmin/tests/: integration_tests.rs
