[package]
name = "sysaidmin"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Jack Danger"]
description = "SYSAIDMIN: terminal-first LLM copilot-style client"
repository = "https://github.com/JackDanger/sysaidmin"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.27"
dirs = "5.0"
ratatui = { version = "0.27", default-features = false, features = ["crossterm"] }
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.9"
thiserror = "1.0"
toml = "0.8"
uuid = { version = "1.8", features = ["v4", "serde"] }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10"

[package.metadata.deb]
name = "sysaidmin"
maintainer = "You, if you're seeing this."
license-file = "../LICENSE.md"
depends = "libstdc++6 (>= 12), libc6 (>= 2.31)"
copyright = """
You have the right to copy. The name isn't even original anyway.
"""


